--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
     body {
+        @apply font-mont;
         @apply bg-neutral-200;
     }
     h3 {
-        @apply text-xl;
+        @apply text-lg font-bold;
+    }
+
+    h4 {
+        @apply text-base font-semibold line-clamp-1;
+    }
+
+    .scn {
+        @apply text-sm text-neutral-300 font-rob;
+    }
+
+    .onhover:hover{
+        @apply bg-[#233D90] text-neutral-50;
+    }
+
+    .scn:hover{
+        @apply text-neutral-50;
     }
 }
